corrected placeholder for other exec commands

--- a/modules/service/deployment/0.1/facets.yaml
+++ b/modules/service/deployment/0.1/facets.yaml
@@ -318,10 +318,8 @@ spec:
               type: array
               title: Readiness Exec Command
               pattern: '^([^,]+)(,\s*[^,]+)*$'
-              x-ui-placeholder: "Enter readiness exec for the Pod, commands are separated
-                by commas"
-              x-ui-error-message: "Value doesn't match pattern, commands needs to
-                be comma separated"
+              x-ui-placeholder:  "Add each command or argument separately, e.g. /bin/sh"
+              x-ui-error-message: "Enter each command/argument in a separate line (e.g., /bin/sh, -c, echo ok)"
               x-ui-visible-if:
                 field: spec.runtime.health_checks.readiness_check_type
                 values: ["ExecCheck"]
@@ -402,10 +400,8 @@ spec:
               type: array
               title: Liveness Exec Command
               pattern: '^([^,]+)(,\s*[^,]+)*$'
-              x-ui-placeholder: "Enter readiness exec for the Pod, commands are separated
-                by commas"
-              x-ui-error-message: "Value doesn't match pattern, commands needs to
-                be comma separated"
+              x-ui-placeholder: "Add each command or argument separately, e.g. /bin/sh"
+              x-ui-error-message: "Enter each command/argument in a separate line (e.g., /bin/sh, -c, echo ok)"
               x-ui-visible-if:
                 field: "spec.runtime.health_checks.liveness_check_type"
                 values: ["ExecCheck"]
@@ -1599,10 +1595,8 @@ spec:
                       type: array
                       title: Readiness Exec Command
                       pattern: '^([^,]+)(,\s*[^,]+)*$'
-                      x-ui-placeholder: "Enter readiness exec for the Pod, commands
-                        are separated by commas"
-                      x-ui-error-message: "Value doesn't match pattern, commands needs
-                        to be comma separated"
+                      x-ui-placeholder: "Add each command or argument separately, e.g. /bin/sh"
+                      x-ui-error-message: "Enter each command/argument in a separate line (e.g., /bin/sh, -c, echo ok)"
                       x-ui-visible-if:
                         field: spec.sidecars.{{this}}.runtime.health_checks.readiness_check_type
                         values: ["ExecCheck"]
@@ -1671,10 +1665,8 @@ spec:
                       type: array
                       title: Liveness Exec Command
                       pattern: '^([^,]+)(,\s*[^,]+)*$'
-                      x-ui-placeholder: "Enter readiness exec for the Pod, commands
-                        are separated by commas"
-                      x-ui-error-message: "Value doesn't match pattern, commands needs
-                        to be comma separated"
+                      x-ui-placeholder: "Add each command or argument separately, e.g. /bin/sh"
+                      x-ui-error-message: "Enter each command/argument in a separate line (e.g., /bin/sh, -c, echo ok)"
                       x-ui-visible-if:
                         field: "spec.sidecars.{{this}}.runtime.health_checks.liveness_check_type"
                         values: ["ExecCheck"]
