--- a/modules/cloud_account/aws/0.1/facets.yaml
+++ b/modules/cloud_account/aws/0.1/facets.yaml
@@ -1,23 +1,58 @@
-intent: "cloud_account"
-alias-flavors: ["default"]
-flavor: aws
-lifecycle: ENVIRONMENT
-version: "0.1"
-description: "cloud_account - aws"
-depends_on: []
-input_type: instance
-composition: {}
-conditional_on_intent: ""
+intent: cloud_account
+flavor: aws_account_demo
+version: 0.1
+description: Module to configure and provision resources within a cloud account
 clouds:
 - aws
-spec: {}
+spec:
+  description: Module to configure and provision resources within a cloud account
+    (AWS, GCP, Azure)
+  properties:
+    region:
+      type: string
+      title: AWS Region
+      description: AWS region where the VPC will be created
+      x-ui-overrides-only: true
+      x-ui-api-source:
+        endpoint: /cc-ui/v1/dropdown/aws/regions-v2
+        method: GET
+        labelKey: region
+        valueKey: region
+        path: regions
+    cloud_account:
+      description: Select the cloud account to use (must be previously linked)
+      title: Cloud Account
+      type: string
+      x-ui-typeable: true
+      x-ui-overrides-only: true
+      x-ui-api-source:
+        endpoint: /cc-ui/v1/accounts/
+        method: GET
+        labelKey: name
+        valueKey: id
+        filterConditions:
+        - field: accountType
+          value: CLOUD
+        - field: provider
+          value: AWS
+        params:
+          includeContent: false
+  required:
+  - cloud_account
+  - region
+  title: Cloud Account Manager
+  type: object
+  x-ui-order:
+  - cloud_provider
+  - cloud_account
+  - region
 outputs:
   default:
-    type: "@outputs/cloud_account"
+    type: '@outputs/cloud_account'
     providers:
       aws:
         source: hashicorp/aws
-        version: "= 3.74.0"
+        version: = 3.74.0
         attributes:
           region: attributes.aws_region
           skip_region_validation: true
@@ -28,7 +63,7 @@ outputs:
               external_id: attributes.external_id
       aws4:
         source: hashicorp/aws4
-        version: "= 4.53.0"
+        version: = 4.53.0
         attributes:
           region: attributes.aws_region
           skip_region_validation: true
@@ -39,7 +74,18 @@ outputs:
               external_id: attributes.external_id
       aws5:
         source: hashicorp/aws5
-        version: "= 5.49.0"
+        version: = 5.49.0
+        attributes:
+          region: attributes.aws_region
+          skip_region_validation: true
+          attributes:
+            assume_role:
+              role_arn: attributes.aws_iam_role
+              session_name: attributes.session_name
+              external_id: attributes.external_id
+      aws593:
+        source: hashicorp/aws593
+        version: = 5.93.0
         attributes:
           region: attributes.aws_region
           skip_region_validation: true
@@ -49,8 +95,11 @@ outputs:
               session_name: attributes.session_name
               external_id: attributes.external_id
 sample:
-  version: "0.1"
-  flavor: aws
+  version: 0.1
+  flavor: aws_account_demo
   kind: cloud_account
   disabled: false
   spec: {}
+iac:
+  validated_files:
+  - variables.tf
