--- a/modules/vpa/default/0.1/facets.yaml
+++ b/modules/vpa/default/0.1/facets.yaml
@@ -1,5 +1,5 @@
 intent: vpa
-flavor: default
+flavor: default_demo
 version: '0.1'
 description: Deploys Vertical Pod Autoscaler (VPA) for automatic resource recommendations
   and right-sizing
@@ -188,7 +188,7 @@ outputs:
     title: VPA Details
 sample:
   kind: vpa
-  flavor: default
+  flavor: default_demo
   disabled: false
   metadata: {}
   version: '0.1'
