--- a/modules/service/statefulset/0.1/facets.yaml
+++ b/modules/service/statefulset/0.1/facets.yaml
@@ -293,9 +293,8 @@ spec:
             readiness_exec_command:
               type: array
               title: Readiness Exec Command
-              pattern: ^([^,]+)(,\s*[^,]+)*$
-              x-ui-placeholder: "Add each command or argument separately, e.g. /bin/sh"
-              x-ui-error-message: "Enter each command/argument in a separate line (e.g., /bin/sh, -c, echo ok)"
+              x-ui-placeholder: "Add each command argument as a new entry"
+              x-ui-error-message: "Enter each command/argument in a separate line"
               x-ui-visible-if:
                 field: spec.runtime.health_checks.readiness_check_type
                 values:
@@ -390,9 +389,8 @@ spec:
             liveness_exec_command:
               type: array
               title: Liveness Exec Command
-              pattern: ^([^,]+)(,\s*[^,]+)*$
-              x-ui-placeholder: "Add each command or argument separately, e.g. /bin/sh"
-              x-ui-error-message: "Enter each command/argument in a separate line (e.g., /bin/sh, -c, echo ok)"
+              x-ui-placeholder: "Add each command argument as a new entry"
+              x-ui-error-message: "Enter each command/argument in a separate line"
               x-ui-visible-if:
                 field: spec.runtime.health_checks.liveness_check_type
                 values:
@@ -496,9 +494,8 @@ spec:
             startup_exec_command:
               type: array
               title: Startup Exec Command
-              pattern: ^([^,]+)(,\s*[^,]+)*$
-              x-ui-placeholder: "Add each command or argument separately, e.g. /bin/sh"
-              x-ui-error-message: "Enter each command/argument in a separate line (e.g., /bin/sh, -c, echo ok)"
+              x-ui-placeholder: "Add each command argument as a new entry"
+              x-ui-error-message: "Enter each command/argument in a separate line"
               x-ui-visible-if:
                 field: spec.runtime.health_checks.startup_check_type
                 values:
@@ -1605,9 +1602,8 @@ spec:
                     readiness_exec_command:
                       type: array
                       title: Readiness Exec Command
-                      pattern: ^([^,]+)(,\s*[^,]+)*$
-                      x-ui-placeholder: "Add each command or argument separately, e.g. /bin/sh"
-                      x-ui-error-message: "Enter each command/argument in a separate line (e.g., /bin/sh, -c, echo ok)"
+                      x-ui-placeholder: "Add each command argument as a new entry"
+                      x-ui-error-message: "Enter each command/argument in a separate line"
                       x-ui-visible-if:
                         field: spec.sidecars.{{this}}.runtime.health_checks.readiness_check_type
                         values:
@@ -1688,9 +1684,8 @@ spec:
                     liveness_exec_command:
                       type: array
                       title: Liveness Exec Command
-                      pattern: ^([^,]+)(,\s*[^,]+)*$
-                      x-ui-placeholder: "Add each command or argument separately, e.g. /bin/sh"
-                      x-ui-error-message: "Enter each command/argument in a separate line (e.g., /bin/sh, -c, echo ok)"
+                      x-ui-placeholder: "Add each command argument as a new entry"
+                      x-ui-error-message: "Enter each command/argument in a separate line"
                       x-ui-visible-if:
                         field: spec.sidecars.{{this}}.runtime.health_checks.liveness_check_type
                         values:
@@ -1771,9 +1766,8 @@ spec:
                     startup_exec_command:
                       type: array
                       title: Startup Exec Command
-                      pattern: ^([^,]+)(,\s*[^,]+)*$
-                      x-ui-placeholder: "Add each command or argument separately, e.g. /bin/sh"
-                      x-ui-error-message: "Enter each command/argument in a separate line (e.g., /bin/sh, -c, echo ok)"
+                      x-ui-placeholder: "Add each command argument as a new entry"
+                      x-ui-error-message: "Enter each command/argument in a separate line"
                       x-ui-visible-if:
                         field: spec.sidecars.{{this}}.runtime.health_checks.startup_check_type
                         values:
