--- a/modules/kubernetes_cluster/aws_eks/0.2/facets.yaml
+++ b/modules/kubernetes_cluster/aws_eks/0.2/facets.yaml
@@ -107,7 +107,7 @@ spec:
           properties:
             instance_types:
               title: Instance Types
-              description: space-separated list of instance types for worker nodes
+              description: List of instance types for worker nodes
               type: array
               x-ui-placeholder: e.g. m4.xlarge t3.2xlarge
               x-ui-overrides-only: true
