--- a/modules/postgres/aurora/0.1/facets.yaml
+++ b/modules/postgres/aurora/0.1/facets.yaml
@@ -182,8 +182,7 @@ spec:
       description: List of additional databases to be created
       pattern: "^(?!.*[_-]{2,})[a-zA-Z0-9]+([-_][a-zA-Z0-9]+)*(, [a-zA-Z0-9]+([-_][a-zA-Z0-9]+)*)*$|^(?!.*[_-]{2,})[a-zA-Z0-9]+([-_][a-zA-Z0-9]+)*(,[a-zA-Z0-9]+([-_][a-zA-Z0-9]+)*)*$|^(?!.*[_-]{2,})[a-zA-Z0-9]+([-_][a-zA-Z0-9]+)*(,
         [a-zA-Z0-9]+([-_][a-zA-Z0-9])+)*$"
-      x-ui-error-message: "Database names must start with an alphanumeric character
-        and should be separated by commas"
+      x-ui-error-message: "Database names must start with an alphanumeric character"
       items:
         type: string
       x-ui-override-disable: true
