updated intent level output name

--- a/intents/kubernetes_cluster/facets.yaml
+++ b/intents/kubernetes_cluster/facets.yaml
@@ -3,5 +3,5 @@ type: K8s
 displayName: Kubernetes Cluster
 description: A group of computing nodes, or worker machines, that run containerized applications.
 outputs:
-  - name: default
+  - name: kubernetes_cluster
     type: "@outputs/kubernetes"
