--- a/modules/elasticsearch/k8s/0.2/facets.yaml
+++ b/modules/elasticsearch/k8s/0.2/facets.yaml
@@ -2,6 +2,7 @@ intent: elasticsearch
 flavor: k8s
 version: '0.2'
 description: Adds elasticsearch - k8s flavor
+critical: true
 clouds:
 - gcp
 - kubernetes
@@ -25,6 +26,7 @@ spec:
       description: Version of Elasticsearch
       minLength: 1
       x-ui-typeable: true
+      x-ui-critical: true
       enum:
         - 8.14.1
         - 7.16.3
