added changes in the facets.yaml

--- a/modules/grafana_dashboard/default/0.1/facets.yaml
+++ b/modules/grafana_dashboard/default/0.1/facets.yaml
@@ -30,6 +30,7 @@ spec:
       description: Complete Grafana dashboard definition following the Grafana JSON
         model
       x-ui-yaml-editor: true
+      x-ui-editor: true
     preserve_uid:
       type: boolean
       title: Preserve Dashboard UID
