--- a/modules/postgres/rds/0.2/facets.yaml
+++ b/modules/postgres/rds/0.2/facets.yaml
@@ -5,6 +5,16 @@ description: Adds postgres module of flavor aws_ecs_rds
 clouds:
 - aws
 inputs:
+  kubernetes_details:
+    optional: false
+    type: "@outputs/kubernetes"
+    default:
+      resource_type: kubernetes_cluster
+      resource_name: default
+    providers:
+      - kubernetes
+      - kubernetes-alpha
+      - helm
   network_details:
     type: "@outputs/aws_vpc"
     default:
